test_output.txt

BSTTests.hs:6:1: error:
    Could not find module ‘BST’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
6 | import BST
  | ^^^^^^^^^^
